# memory_pool

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  simple_example.cpp
include/: CMakeLists.txt
include/mp/: memory_pool.hpp  memory_pool_allocator.hpp  mp.hpp
test/gtest/: CMakeLists.txt  basic_compaction.cpp  free_test.cpp
